# gpslam

./: .gitignore  CHANGELOG  CMakeLists.txt  README.md  gpslam.h
gpslam/: CMakeLists.txt
gpslam/gp/: CMakeLists.txt  GPutils.cpp  GPutils.h  GaussianProcessInterpolatorLinear.h  GaussianProcessInterpolatorPose2.h  GaussianProcessInterpolatorPose3.h  GaussianProcessInterpolatorPose3VW.h  GaussianProcessInterpolatorRot3.h  GaussianProcessPriorLinear.h  GaussianProcessPriorPose2.h  GaussianProcessPriorPose3.h  GaussianProcessPriorPose3VW.h  GaussianProcessPriorRot3.h  Pose3utils.cpp  Pose3utils.h
gpslam/gp/tests/: testGaussianProcessInterpolatorLinear.cpp  testGaussianProcessInterpolatorPose2.cpp  testGaussianProcessInterpolatorPose3.cpp  testGaussianProcessInterpolatorPose3VW.cpp  testGaussianProcessInterpolatorRot3.cpp  testGaussianProcessPriorLinear.cpp  testGaussianProcessPriorPose2.cpp  testGaussianProcessPriorPose3.cpp  testGaussianProcessPriorPose3VW.cpp  testGaussianProcessPriorRot3.cpp  testPose3Utils.cpp  testSerializationGP.cpp
gpslam/slam/: CMakeLists.txt  GPInterpolatedAttitudeFactorRot3.h  GPInterpolatedGPSFactorPose3.h  GPInterpolatedGPSFactorPose3VW.h  GPInterpolatedProjectionFactorPose3.h  GPInterpolatedRangeFactor2DLinear.h  GPInterpolatedRangeFactorPose2.h  GPInterpolatedRangeFactorPose3.h  OdometryFactor2DLinear.h  RangeBearingFactor2DLinear.h  RangeFactor2DLinear.h  RangeFactorPose2.h
gpslam/slam/tests/: testGPInterpolatedGPSFactorPose3.cpp  testGPInterpolatedGPSFactorPose3VW.cpp  testGPInterpolatedProjectionFactorPose3.cpp  testGPInterpolatedRangeFactor2DLinear.cpp  testGPInterpolatedRangeFactorPose2.cpp  testGPInterpolatedRangeFactorPose3.cpp  testOdometryFactor2DLinear.cpp  testRangeBearingFactor2DLinear.cpp  testRangeFactor2DLinear.cpp  testSerializationSLAM.cpp
matlab/: AHRSexample.m  GPAHRSexample.m  PlazaPose2.m  range_measure_fit.m
matlab/data/: MOCAP_POSE_DATA_matlab.txt  Plaza1.mat  Plaza2.mat  RAW_IMU_DATA_matlab.txt
